<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:layout_margin="20dp"
    android:background="@color/lightgreen"
    tools:context=".Game"
    android:gravity="center">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/score_0"
        android:textSize="30sp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lives_5"
        android:textSize="30sp"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:textSize="30sp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="30sp"
        android:gravity="center"/>


    <Button
        android:id="@+id/spinTheWheelBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spin_the_wheel"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">

        <EditText
            android:id="@+id/achievedPoints"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/indtast_bogstav"
            android:gravity="center"
            android:layout_weight="1"
            android:importantForAutofill="no"
            android:inputType="text" />

        <Button
            android:id="@+id/guessBtn"
            android:layout_width="221dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/g_t" />

    </LinearLayout>
</LinearLayout>